2007-08-11  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg-save.c (save_dialog): use a more
	understandable label and a tooltip for the option enabling custom
	quantization tables.

2007-08-10  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg.[ch]
	* plug-ins/jpeg/jpeg-save.[ch]: in the JPEG save dialog, removed
	the option "Force baseline JPEG" and added the new option "Use
	custom quantization tables" to allow resaving a JPEG file with the
	same compression settings as the original file. This is useful if
	the quantization tables are different from those that can be
	created by the IJG JPEG library.

	* plug-ins/jpeg/jpeg-settings.[ch]: updated comments, changed the
	return type of jpeg_restore_original_tables() because the IJG JPEG
	library expects unsigned integers.

2007-08-10  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpnumberpairentry.c: store separators as
	gunichar array. Use the default separator in case that no
	separator is set. Rewritten gimp_number_pair_entry_parse_text()
	to handle non-ASCII separators.

2007-08-10  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimpcroptool.c (gimp_crop_tool_button_release): Set
	default 'Fixed: Aspect ratio' values to the size of the pending
	crop rectangle. Fixes bug #355545.

	* app/tools/gimprectangletool.[ch]
	(gimp_rectangle_tool_get_rectangle_size): New helper function.

2007-08-10  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimppropwidgets.c
	(gimp_prop_number_pair_entry_config_notify): Fixed bug where
	property notifications were checked against hardcoded property
	names instead of the ones configured to the
	GimpPropNumberPairEntryData object.

2007-08-10  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleoptions.c: Added
	"default-aspect-numerator", "default-aspect-denominator",
	"default-fixed-size-width" and "default-fixed-size-height" as
	non-serialized tool options, and "overridden-fixed-aspect" and