@@ -1,3 +1,10 @@
+2007-08-11  Martin Nordholts  <martinn@svn.gnome.org>
+
+	* app/widgets/gimppropwidgets.c
+	(gimp_prop_number_pair_entry_number_pair_user_override_notify):
+	Only set config user override property when it changed, to avoid
+	deadlock.
+
 2007-08-11  Raphaël Quinet  <raphael@gimp.org>
 
 	* plug-ins/jpeg/jpeg-save.c (save_dialog): use a more
